@@ -1,3 +1,11 @@
+2011-06-30  Dov Grobgeld  <dov.grobgeld@gmail.com>
+
+        * plugins/SConstruct: Fixed compilation under windows for
+        Fedora 15 cross compilation.
+
+        * giv-parser.cc: Changed logic to finish end of input if
+        no \n or \r was found at the end of the line.
+
 2011-04-28  Dov Grobgeld  <dov.grobgeld@gmail.com>
 
         * configure.in : Bumped version to 0.9.19 .
